[tool.poetry]
name = "crud-drf"
version = "0.1.0"
description = ""
authors = ["Shrine Sabu <shrine02sabu@gmail.com>"]
readme = "README.md"
packages = [{include = "crud_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
